# Radboud

./: .gitmodules  Radboud Credits.xlsx
Algorithms and Datastructures/Practicals/0-addition/: main.py
Applied Cryptography/Exam/: 2022-06-exam-template.tex  Q2_Paper.pdf.lnk
Applied Cryptography/Exam2/: 2022-07-resit-template.tex
Capita Selecta in Cyber Security/Assignments/Assignment_1/: nu.nl.json  nu.nl_adblocker.json  requirements.txt  s1047485.py
Engineering Cryptographic Software/Assignment/: ce2021-sw-assignment-s1013846-s1047485.tar.bz2
Introduction to Cryptography/Assignments/: Assignment_1.tex  Assignment_2.go  Assignment_4.des.go
Introduction to Cryptography/Last Year slides and stuff/: Table of Contents.html
Introduction to Cryptography/Notes/: Lecture 1.docx  Lecture 2.docx  Lecture 3.docx
Philosophy&Ethics/Assignments/: Individual formative assignment.docx  assignment1.docx  assignment2.docx  final_assignment.docx
Physical Attacks on Secure Systems/Assignments/Individual/: NewCode.rar  OriginalCode.rar
Physical Attacks on Secure Systems/Assignments/Individual/Code/: Makefile.AArch32
Physical Attacks on Secure Systems/Assignments/Individual/Code/include/: common.h
Physical Attacks on Secure Systems/Assignments/Individual/Code/src/: main.c  utils.c
Physical Attacks on Secure Systems/Assignments/Individual/Code/src/aarch32/: entry.S
Physical Attacks on Secure Systems/Tutorials/: 3_Alignment_Solution.ipynb  3_SNR_Solution.ipynb  4_TinnyAES_TVLA.ipynb
Physical Attacks on Secure Systems/Tutorials/.ipynb_checkpoints/: 4_TinnyAES_TVLA-checkpoint.ipynb
Security in Organizations/Assignments/Assignment6/: SSLFuserslist.csv  WindowsServer2003SecurityGuide.doc
Software Security/: SoftwareSecurityNotes.docx
Software Security/Assignments/PREfast/: CMakeLists.txt  LucasVanDerLaan_NikolayKyosev_prefast_exercise.cpp  prefast_exercise.cpp
Software_Product_Lines/: eclipse_laptop.lnk  eclipse_pc.lnk
